# hikkoshiori

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Procfile  README.md  amplify.yml  client.env  client_secret.env  db.env  docker-compose.yml  heroku.yml  server.env
.github/: labeler.yml
.github/workflows/: deploy_heroku_server.yml  deploy_server.yml  (+8 more)
db/: 01_schema.sql  02_data.sql
docs/: CODING.md  DEPLOY.md  ER.md  FRONT.md  IMPL.md  JIRA.md  README.md  SERVER.md
front/: Dev_Dockerfile  Dockerfile  Procfile  Stage_Dockerfile  heroku.yml
server/: Dockerfile  Procfile  README.md  Stage_Dockerfile  heroku.yml  pyproject.toml  requirements.txt
server/app/: db.py  env.py  logger.py  main.py  middlewares.py  setup.py  test_main.py
server/app/controllers/: advice.py  db_test.py  hello.py  housekeep.py  layout_controller.py  layout_maker.py  property.py  property_collector.py  user.py
server/app/models/: housekeep.py
server/app/models/db/: advice_db.py  auth_db.py  bookmark_db.py  housekeep_column_db.py  housekeep_db.py  housekeep_table_db.py  property_db.py  user_db.py
server/app/models/schemas/: advice.py  auth.py  bookmark.py  housekeep.py  housekeep_column.py  housekeep_table.py  layout.py  property.py  user.py
server/app/models/schemas/_layout/: base_layout_model.py  demo_generate_image.py
server/app/routers/: router.py
server/app/tests/: test_advice.py  test_fetch_lng_lat_from_address.py  test_main.py  test_property_collector.py  test_property_homes_parser.py
server/app/tests/property_html/: homes_example00.html  homes_example01.html  homes_example02.html  suumo_example00.html  suumo_example01.html  suumo_example02.html
server/poetry/: pyproject.toml
(+78 files in other folders)
