[tool.poetry]
name = "hikkoshiori-server"
version = "0.1.0"
description = "The server-side application fo Hikkoshiori"
authors = ["Kusunoki Distillery<hoppiece@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.40"
psycopg2 = "^2.9.3"
requests = "^2.28.1"
psycopg2-binary = "2.9.3"
gunicorn = "^20.1.0"
taskipy = "^1.10.2"
databases = "^0.6.1"
asyncpg = "^0.26.0"
lxml = "^4.9.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
